# PyNotifyYou

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
py_notify_you/: __init__.py  ntfy.py  pushbullet.py
