[tool.poetry]
name = "Py-Notify-You"
version = "0.1.0"
description = "A simple library for sending notifications"
repository = "https://github.com/shizamuru-dev/PyNotifyYou/"
authors = ["Shizamuru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
